--- a/main.css
+++ b/main.css
@@ -228,6 +228,12 @@ height: 100vh; /* or a fixed height */
   border-radius: 20px;
 }
 
+@media only screen and (max-width: 768px) {
+#heading-name {
+font-size: 50px; /* adjust the font size */
+}
+}
+
 #heading-desc {
   font-size: 36px;
   text-shadow: 2px 2px #000000;
