--- a/main.css
+++ b/main.css
@@ -203,11 +203,13 @@ display: flex;
 
 @media only screen and (max-width: 768px) {
 .header {
-background-size: 100% auto;
-background-position: center;
-height: 100vh; /* or a fixed height */
+display: flex !important;
+flex-direction: column !important;
+align-items: center !important;
+justify-content: center !important;
 }
 }
+
 .header h1 {
   font-size: 80px;
   color: white;
