--- a/main.css
+++ b/main.css
@@ -227,8 +227,9 @@ justify-content: center !important;
 
 #heading-name {
   font-size: 100px;
-  text-shadow: 2px 2px #000000;
-  border-radius: 20px;
+text-shadow: 2px 2px #000000;
+border-radius: 20px;
+font-size: 50px;
 }
 
 @media only screen and (max-width: 768px) {
