--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ SECTION WRAPS
 
 /* Header Wrap */
 .header {
-background: url("cocoa-beach-me.jpg") no-repeat center top;
+background: url("background_me.jpg") no-repeat center top;
 padding-top: 10vw;
 padding-bottom: 10vw;
 text-align: center;
